--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
 				  Your browser does not support the video tag.
 				</video>
 				</div>
+				If your browser does not support the video tag,
+				<span style="font-size: strong;"><a href="https://youtu.be/GwvC2u9r01o"><strong>click here.</strong></a></span>
 
 				<!-- Supp mat -->
 				<hr>
