adding final version video
adding final version video

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 				<hr>
 				<div style="width:100%; text-align: center;">
 				<video controls autoplay  muted preload="auto" width="1000" height="700">
-				  <source src="demos/Video/narration_IMGA.mp4" type="video/mp4">
-				  <source src="demos/Video/narration_IMGA.ogg" type="video/ogg">
+				  <source src="demos/Video/108-fg.mp4" type="video/mp4">
+				  <source src="demos/Video/108-fg.ogg" type="video/ogg">
 				  Your browser does not support the video tag.
 				</video>
 				</div>
