--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<p style="text-align: center;">
 					 <a href="https://" target="_blank" rel="noopener">Article</a> |
 					<!-- <a href="#audio">Audio examples</a> |  -->
-					 <a href="https://youtu.be/GwvC2u9r01o">Video demo</a> |    
+					 <a href="#results">Video demo</a> |    
 					<a href="#supplementary material">Supplementary material</a>|
 					<a href="#acknowledgement">Acknowledgement</a>
 				</p>
