--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
 				
 				
 				<p style="text-align: center;">
-					 <a href="https://" target="_blank" rel="noopener">Paper</a> |
-					 <a href="https://hal.science/hal-04050608/document">
+					 <a href="https://hal.science/hal-04050608/document">Paper</a>|
 					 <a href="#results">Video demo</a> |    
 					<a href="#supplementary material">Supplementary material</a>|
 					<a href="#acknowledgement">Acknowledgement</a>
