--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
 				
 				
 				<p style="text-align: center;">
-					 <a href="https://hal.science/hal-04050608/document">Paper</a>|
-					 <a href="#results">Video demo</a> |    
-					<a href="#supplementary material">Supplementary material</a>|
+					<a href="https://hal.science/hal-04050608/document">Paper</a> |
+					<a href="https://github.com/yansen0508/IMGA">Code</a> |
+					<a href="#results">Video demo</a> |    
+					<a href="#supplementary material">Supplementary material</a> |
 					<a href="#acknowledgement">Acknowledgement</a>
 				</p>
 
