--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 				<p style="text-align: center; line-height: 100%;">
 					CentraleSupélec, IETR UMR CNRS 6164, France <br>
 					email:{first_name}.{last_name}@centralesupelec.fr <br>
+					yansen0508@gmail.com <br>
 				</p>
 				
 				
