--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				<table>
 					<td text-align: center;>
 						<img src="demos/maintext/pop_init.png" align="center" width="600" title="population initialization"/> 
-						<p <span style="font-size: strong; color:gray;"><a name="IMGA"></a><strong>Example of population initialization. We use GANimation to generate different facial expressions (from #1 to #20) from a neutral face (#0 in red) and different AU (action unit) vectors.</strong></span> </p>
+						<p <span style="font-size: strong; color:gray;"><a name="IMGA"></a><strong>Example of population initialization. We use GANimation to generate different facial expressions (from #1 to #20) from a neutral face (#0 in pink) and different AU (action unit) vectors.</strong></span> </p>
 					</td>
 				</table>
 				Differing from the majority of facial manipulation techniques that are designed to modify high-level attributes such as hair color, gender, age, or emotional expressions,
